--- a/css/lending-c3eb72.webflow.css
+++ b/css/lending-c3eb72.webflow.css
@@ -91,6 +91,7 @@
 .header-style {
   grid-row-gap: 100px;
   flex-direction: column;
+  order: -1;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
@@ -126,6 +127,8 @@
 
 .links {
   grid-column-gap: 32px;
+  color: #fff;
+  cursor: pointer;
   flex: 0 auto;
   justify-content: center;
   align-items: center;
@@ -207,6 +210,7 @@
 
 .base_2 {
   grid-column-gap: 8px;
+  cursor: pointer;
   flex: 0 auto;
   justify-content: center;
   align-items: center;
@@ -316,6 +320,7 @@
 }
 
 .buttonprimary {
+  cursor: pointer;
   background-color: #12ff80;
   border-radius: 6px;
   flex-direction: column;
@@ -354,6 +359,8 @@
 .image-136 {
   mix-blend-mode: difference;
   object-fit: cover;
+  width: 500px;
+  height: 500px;
 }
 
 .content-style-3 {
@@ -433,10 +440,10 @@
   margin-top: 0;
   margin-bottom: 0;
   font-family: Citerne, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 200;
-  line-height: 22px;
+  line-height: 28px;
 }
 
 .frame-1000002830 {
@@ -589,6 +596,7 @@
 }
 
 .text-button {
+  cursor: pointer;
   border-radius: 6px;
   flex-direction: column;
   justify-content: center;
@@ -1017,7 +1025,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   margin-right: 0;
-  padding: 80px 135px;
+  padding: 40px 135px 80px;
   text-decoration: none;
   display: flex;
 }
@@ -1048,11 +1056,16 @@
 }
 
 .links-2 {
+  border-top: 1px solid #303033;
+  border-bottom: 1px solid #303033;
   flex-flow: wrap;
   flex: 0 auto;
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
+  margin-top: 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
   text-decoration: none;
   display: flex;
   position: static;
@@ -1077,7 +1090,7 @@
   margin-bottom: 0;
   font-family: Citerne, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 100%;
   text-decoration: none;
 }
@@ -1121,7 +1134,7 @@
   margin-bottom: 0;
   font-family: Citerne, Arial, sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 56px;
   text-decoration: none;
 }
@@ -1336,6 +1349,8 @@
 
 .flex-block-5 {
   justify-content: space-between;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .flex-block-6 {
@@ -1362,6 +1377,7 @@
 
 .image-138 {
   box-sizing: content-box;
+  order: 1;
   width: 100%;
   max-width: 1920%;
 }
@@ -1376,10 +1392,11 @@
 }
 
 .background-header {
+  z-index: -1;
   grid-column-gap: 16px;
   grid-row-gap: 16px;
   flex: 0 auto;
-  order: 0;
+  order: 1;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
@@ -1388,7 +1405,7 @@
   height: 100%;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
+  display: block;
   position: absolute;
   inset: 0% 0% auto;
   overflow: visible;
@@ -1557,7 +1574,7 @@
   font-family: Citerne, Arial, sans-serif;
   font-size: 20px;
   font-weight: 200;
-  line-height: 26px;
+  line-height: 28px;
   text-decoration: none;
 }
 
@@ -1684,6 +1701,88 @@
   overflow: hidden;
 }
 
+.text-block-2 {
+  color: #a1a3a7;
+  text-align: justify;
+  column-count: auto;
+  white-space: normal;
+  word-break: normal;
+  font-family: Citerne, Arial, sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 22px;
+}
+
+.mobile-nav-overlay {
+  z-index: 2147483647;
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
+  mix-blend-mode: normal;
+  background-color: #fff0;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 8px 32px;
+  text-decoration: none;
+  display: none;
+  position: sticky;
+  top: 0;
+}
+
+.buttonprimary_2-mobile {
+  background-color: #12ff80;
+  border-radius: 6px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  text-decoration: none;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+}
+
+.links-black {
+  grid-column-gap: 32px;
+  color: #121312;
+  flex: 0 auto;
+  justify-content: center;
+  align-items: center;
+  height: 48px;
+  text-decoration: none;
+  display: flex;
+}
+
+.link-green {
+  color: #12ff80;
+  cursor: pointer;
+}
+
+.social-logo {
+  cursor: pointer;
+}
+
+.link-block-2 {
+  border: 0 #000;
+  text-decoration: none;
+}
+
+.link-block-3, .link-block-4 {
+  text-decoration: none;
+}
+
+.footer-link {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.flex-block-9 {
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
+  border-top: 1px solid #303033;
+  padding-top: 40px;
+}
+
 @media screen and (max-width: 991px) {
   .frame-1000002830 {
     padding-bottom: 32px;
@@ -1703,6 +1802,11 @@
 
   .tag {
     text-align: center;
+  }
+
+  .image-136 {
+    width: 343px;
+    height: 343px;
   }
 
   .activities {
@@ -1786,6 +1890,7 @@
   }
 
   .image-138 {
+    height: 1000px;
     overflow: clip;
   }
 
@@ -1920,6 +2025,62 @@
   .flex-block-8 {
     grid-column-gap: 8px;
     grid-row-gap: 8px;
+  }
+
+  .mobile-nav-overlay {
+    z-index: 1000;
+    object-fit: fill;
+    background-color: #121312;
+    flex-flow: column;
+    justify-content: space-between;
+    padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: none;
+    position: absolute;
+    inset: 0%;
+  }
+
+  .nav-link {
+    border-bottom: 1px solid #303033;
+    width: 100%;
+    padding: 16px 0;
+  }
+
+  .link-block {
+    width: 100%;
+    text-decoration: none;
+    display: block;
+  }
+
+  .text-block-3 {
+    font-family: Citerne, Arial, sans-serif;
+    font-size: 32px;
+    line-height: 36px;
+    text-decoration: none;
+  }
+
+  .h5-mobile {
+    color: #fff;
+    font-family: Citerne, Arial, sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 28px;
+    text-decoration: none;
+  }
+
+  .button-nav-link {
+    border-bottom: 1px solid #303033;
+    width: 100%;
+    padding: 16px 0;
+  }
+
+  .buttonprimary_2-mobile {
+    width: 100%;
+  }
+
+  .hamburger-close {
+    display: none;
   }
 }
 
