fix: Change mobile navigation to be a fixed position

--- a/css/lending-c3eb72.webflow.css
+++ b/css/lending-c3eb72.webflow.css
@@ -2037,8 +2037,8 @@
     padding-left: 16px;
     padding-right: 16px;
     display: none;
-    position: absolute;
-    inset: 0%;
+    position: fixed;
+    inset: 0;
   }
 
   .nav-link {
